--- a/src/main/resources/theme/bioconductor/login/resources/css/login.css
+++ b/src/main/resources/theme/bioconductor/login/resources/css/login.css
@@ -1,7 +1,7 @@
 .login-pf body {
-    background: url("../img/keycloak-bg.png") no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
+    background: linear-gradient(0deg, rgba(135,177,63,1) 0%, rgba(255,255,255,1) 50%, rgba(26,129,194,1) 100%);
+    color: rgba(255, 255, 255, 1);
 }
 
 /*IE compatibility*/
@@ -217,10 +217,10 @@ a#kc-current-locale-link::after {
 }
 
 div.kc-logo-text {
-    background-image: url(../img/keycloak-logo-text.png);
+    background-image: url(../img/bioconductor_logo_rgb.svg);
     background-repeat: no-repeat;
-    height: 63px;
-    width: 300px;
+    height: 150px;
+    width: 450px;
     margin: 0 auto;
 }
 
